@@ -1,5 +1,10 @@
 Changelog for Miosix np embedded OS
 
+- Fixed a bug in the stm32 SDIO drivers that caused the slowest clock speed
+  selection, resulting in a serious performance regression when writing to
+  an SD card. Bug was added in commit e697ded4325a5a2de12706712abc4a846d733b3e
+- Added streamwriter example to show how to write to an SD card at a relatively
+  high data rate.
 - Added dirlist testcase
 - Relaxed file open mode checks in DevFs to allow opening device files with
   fopen()
